objects/Account/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>