objects/Account/fields/Female_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Female_Percentage__c</fullName>
    <label>Female Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>