objects/Account/fields/Fiscal_Year_End_Month_Day__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End_Month_Day__c</fullName>
    <label>Fiscal Year End Month Day</label>
    <type>Date</type>
</CustomField>