objects/Account/fields/Male_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Male_Percentage__c</fullName>
    <label>Male Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>