objects/Account/fields/Nature_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business__c</fullName>
    <label>Nature of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economic Activity</fullName>
            </value>
            <value>
                <fullName>Continuous process</fullName>
            </value>
            <value>
                <fullName>Social Activity</fullName>
            </value>
            <value>
                <fullName>Government control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>