objects/Account/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>LOWW</fullName>
            </value>
            <value>
                <fullName>NORM</fullName>
            </value>
            <value>
                <fullName>URGT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>