objects/Account/fields/Turnover_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Percentage__c</fullName>
    <label>Turnover Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>