objects/Account/recordTypes/Broker_Account.recordType-meta.xml
<RecordType>
    <fullName>Broker_Account</fullName>
    <active>true</active>
    <label>Broker Account</label>
</RecordType>