objects/Account/recordTypes/Company_Account.recordType-meta.xml
<RecordType>
    <fullName>Company_Account</fullName>
    <active>true</active>
    <label>Company Account</label>
</RecordType>