objects/Account/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <description>Do not use</description>
    <label>Corporate</label>
</RecordType>