objects/Account/recordTypes/Hospital_Account.recordType-meta.xml
<RecordType>
    <fullName>Hospital_Account</fullName>
    <active>false</active>
    <label>Hospital Account</label>
</RecordType>