objects/Account/recordTypes/University_Account.recordType-meta.xml
<RecordType>
    <fullName>University_Account</fullName>
    <active>false</active>
    <label>University Account</label>
</RecordType>